# demo_embedding

./: Makefile  README.md  pyproject.toml
demo_embedding/: data_loader.py  input.txt  mode.py  model.py  test_embedding.py  test_sentense_encoder.py  training.py
demo_embedding/examples/: bert.ipynb  feature_extractions.ipynb  feature_extractions.py  hf_datasets.ipynb  layer_norm.py  mlp.py  scaled_dot_product_attention.py  similarity.ipynb  simple_training.py
