[tool.poetry]
name = "demo-embedding"
version = "0.1.0"
description = ""
authors = ["Shinya Maeda <dosuken0122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
numpy = "^2.0.1"
black = "^24.8.0"
tiktoken = "^0.7.0"
matplotlib = "^3.9.1.post1"
transformers = "^4.44.0"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
